Fixed heading tags nested in <p> and fixed im project demo forcing horizontal scroll bar

--- a/public/projectOverlay.css
+++ b/public/projectOverlay.css
@@ -184,7 +184,7 @@
 }
 
 #project-demo-inventory-manager {
-    width: auto;
+    width: 100%;
     height: auto;
     max-width: 500px;
     max-height: 60vh;
